add endpoints and readme
